<resources>
    <string name="app_name">Get Down</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_begin">Begin</string>
    <string name="button_get_location">Get Location</string>
    <string name="edit_friend_name">Name</string>
    <string name="text_add_friend_title">Enter friend\'s details:</string>
    <string name="edit_choose_location">Choose Location...</string>
    <string name="search_hint">Enter Address, City or Zip Code</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_place_button">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="user_image">User\'s Image</string>
</resources>
